<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_media">Медиатека</string>
    <string name="title_settings">Настройки</string>
    <string name="title_search">Поиск</string>
    <string name="title_darkmode">Темная тема</string>
    <string name="title_shareapp">Поделиться приложением</string>
    <string name="title_support">Написать в поддержку</string>
    <string name="title_agreement">Пользовательское соглашение</string>
    <string name="mediaViewGap">Экран для медиа</string>
    <string name="settingsViewGap">Экран поиска</string>
    <string name="input_hint">Поиск</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="share_agriments">https://yandex.ru/legal/practicum_offer/</string>
    <string name="support_title">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="support_email">tsoy@gmlab.pro</string>
    <string name="search_update">Обновить</string>
    <string name="connection_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="nothing_to_search">Последнего не существует</string>
    <string name="history_header_text">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="track_time">Длительность</string>
    <string name="collectionName">Альбом</string>
    <string name="releaseDate">Год</string>
    <string name="primaryGenreName">Жанр</string>
    <string name="country">Страна</string>

</resources>