<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="18dp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="12dp"
            android:paddingTop="10dp"
            android:paddingEnd="68dp"
            android:paddingBottom="12dp"
            android:text="@string/title_settings"
            android:textColor="@color/black"
            android:textSize="@dimen/base_text_size" />

    </LinearLayout>

    <FrameLayout
        style="@style/SettingsLineFrame"
        android:layout_marginTop="24dp"
        android:paddingEnd="6dp"
        tools:ignore="RtlSymmetry">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/title_darkmode"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="end|center"
            android:paddingStart="9dp"
            android:paddingEnd="12dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

    </FrameLayout>

    <FrameLayout
        style="@style/SettingsLineFrame"
        tools:ignore="RtlSymmetry">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/title_shareapp"/>

        <ImageView
            style="@style/SettingsLineIcon"
            android:src="@drawable/share_icon"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <FrameLayout
        style="@style/SettingsLineFrame"
        tools:ignore="RtlSymmetry">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/title_support"/>

        <ImageView
            style="@style/SettingsLineIcon"
            android:src="@drawable/support_icon"
            tools:ignore="ContentDescription" />

    </FrameLayout>

    <FrameLayout
        style="@style/SettingsLineFrame"
        tools:ignore="RtlSymmetry">

        <TextView
            style="@style/SettingsLineText"
            android:text="@string/title_agreement"/>

        <ImageView
            style="@style/SettingsLineIcon"
            android:src="@drawable/next_icon"
            tools:ignore="ContentDescription" />
    </FrameLayout>
</LinearLayout>