<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/base_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="@dimen/mid_space_buttons_padding"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/base_text_size" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/title_search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/base_text_size"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/search_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/mediaButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/mid_space_buttons_padding"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/title_media"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/base_text_size"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/media_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/mid_space_buttons_padding"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:backgroundTint="@color/white"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/title_settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/base_text_size"
        app:cornerRadius="@dimen/corner_radius"
        app:icon="@drawable/settings_icon"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/icon_padding"
        app:iconTint="@color/black" />

</LinearLayout>