<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@drawable/back_icon"
                android:padding="18dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_settings"
                android:paddingStart="12dp"
                android:paddingTop="10dp"
                android:paddingEnd="68dp"
                android:paddingBottom="12dp"
                android:textColor="@color/black"
                android:textSize="@dimen/base_text_size"
                />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="11dp"
            android:paddingEnd="6dp"
            android:paddingStart="@dimen/base_padding"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_darkmode"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="11dp"
                android:paddingStart="9dp"
                android:paddingEnd="12dp"
                android:layout_gravity="end"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="19dp"
            android:paddingBottom="18dp"
            android:paddingEnd="12dp"
            android:paddingHorizontal="@dimen/base_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_shareapp"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/share_icon"
                android:paddingVertical="3dp"
                android:paddingHorizontal="4dp"
                android:layout_gravity="end"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="19dp"
            android:paddingBottom="18dp"
            android:paddingEnd="12dp"
            android:paddingHorizontal="@dimen/base_padding"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_support"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/support_icon"
                android:paddingVertical="3dp"
                android:paddingHorizontal="2dp"
                android:layout_gravity="end"
                />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="19dp"
            android:paddingBottom="18dp"
            android:paddingEnd="12dp"
            android:paddingHorizontal="@dimen/base_padding"
            tools:ignore="RtlSymmetry">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_support"
                android:layout_gravity="center_vertical"
                android:textSize="@dimen/small_text_size"
                android:textColor="@color/black"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/next_icon"
                android:paddingVertical="5dp"
                android:paddingHorizontal="8dp"
                android:layout_gravity="end"
                />

        </FrameLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>